better candidates tips